[package]
name = "launcher"
version = "2.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
configparser = "3.1.0"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Environment",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1.31"

[profile.release]
lto = true
opt-level = "z"
strip = true
